fix: remove pnpm-lock.yaml

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "prettier": "prettier --write --ignore-unknown .",
     "prettier:check": "prettier --check --ignore-unknown .",
     "lint-staged": "lint-staged",
-    "test": "pnpm lint && pnpm prettier:check"
+    "test": "next lint && prettier --check --ignore-unknown ."
   },
   "git": {
     "pre-commit": "lint-staged"
