--- a/vercel.json
+++ b/vercel.json
@@ -7,5 +7,9 @@
         "installCommand": "npm install && npm install @radix-ui/react-avatar @radix-ui/react-progress @radix-ui/react-switch @radix-ui/react-tooltip"
       }
     }
-  ]
+  ],
+  "buildCommand": "npm run build",
+  "framework": "nextjs",
+  "devCommand": "npm run dev",
+  "packageManager": "npm"
 }
