Fix: Explicitly configure npm as package manager and disable frozen lockfile

--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,6 @@
 script-shell = /bin/bash
-node-binary = ${NVM_DIR}/versions/node/v20.19.1/bin/node 
+node-binary = ${NVM_DIR}/versions/node/v20.19.1/bin/node
+engine-strict=false
+legacy-peer-deps=true
+prefer-offline=true
+use-npm=true 
