--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,30 +20,25 @@ jobs:
         with:
           node-version-file: '.nvmrc'
 
-      - name: Install pnpm
-        uses: pnpm/action-setup@v4
-        with:
-          version: 9
-
       - name: Cache node_modules
         id: node-modules-cache
         uses: actions/cache@v3
         with:
           path: '**/node_modules'
-          key: node-modules-cache-${{ hashFiles('**/pnpm-lock.yaml') }}
+          key: node-modules-cache-${{ hashFiles('**/package-lock.json') }}
 
       - name: Install dependencies
         if: steps.node-modules-cache.outputs.cache-hit != 'true'
-        run: pnpm install --frozen-lockfile
+        run: npm ci
 
       - name: Run linting
-        run: pnpm lint
+        run: npm run lint
 
       - name: Run type checking
-        run: pnpm tsc --noEmit
+        run: npx tsc --noEmit
 
       - name: Run format check
-        run: pnpm prettier:check
+        run: npm run prettier:check
 
       - name: Setup Supabase CLI
         uses: supabase/setup-cli@v1
