--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -74,6 +74,6 @@ jobs:
           vercel-token: ${{ secrets.VERCEL_TOKEN }}
           vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
           vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
-          vercel-args: '--prod --prebuilt'
+          vercel-args: '--prod'
           alias-domains: |
             staging.feedvote.com
