--- a/vercel.json
+++ b/vercel.json
@@ -10,5 +10,6 @@
   ],
   "buildCommand": "npm run build",
   "framework": "nextjs",
-  "devCommand": "npm run dev"
+  "devCommand": "npm run dev",
+  "ignoreCommand": "if [[ \"$VERCEL_GIT_COMMIT_REF\" == \"staging\" ]]; then exit 0; else exit 1; fi"
 }
