--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -59,11 +59,18 @@ jobs:
           SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
           SUPABASE_DB_PASSWORD: ${{ secrets.STAGING_DB_PASSWORD }}
 
+      - name: Prepare Staging Configuration
+        run: |
+          # Use staging-specific Vercel configuration
+          cp vercel.staging.json vercel.json
+          echo "Using staging-specific Vercel configuration"
+
       - name: Build Next.js app
         run: npm run build
         env:
           NEXT_PUBLIC_SUPABASE_URL: ${{ secrets.STAGING_SUPABASE_URL }}
           NEXT_PUBLIC_SUPABASE_ANON_KEY: ${{ secrets.STAGING_SUPABASE_ANON_KEY }}
+          NEXT_PUBLIC_SITE_URL: 'https://staging.feedvote.com'
           SUPABASE_AUTH_GOOGLE_CLIENT_ID: ${{ secrets.STAGING_SUPABASE_AUTH_GOOGLE_CLIENT_ID }}
           SUPABASE_AUTH_GOOGLE_SECRET: ${{ secrets.STAGING_SUPABASE_AUTH_GOOGLE_SECRET }}
           SUPABASE_AUTH_GOOGLE_REDIRECT_URI: ${{ secrets.STAGING_SUPABASE_AUTH_GOOGLE_REDIRECT_URI }}
@@ -74,6 +81,6 @@ jobs:
           vercel-token: ${{ secrets.VERCEL_TOKEN }}
           vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
           vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
-          vercel-args: '--prod'
+          vercel-args: '--environment=preview'
           alias-domains: |
             staging.feedvote.com
