--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -81,6 +81,6 @@ jobs:
           vercel-token: ${{ secrets.VERCEL_TOKEN }}
           vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
           vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
-          vercel-args: '--environment=preview'
+          vercel-args: '--target=preview'
           alias-domains: |
             staging.feedvote.com
