--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -48,13 +48,13 @@ jobs:
 
       - name: Deploy Supabase migrations
         run: |
-          # Use Supavisor URL format which supports IPv4
-          echo "Setting up Supabase project with IPv4 support"
-          supabase link --project-ref ${{ secrets.STAGING_PROJECT_ID }}
+          # Skip direct database operations due to IPv6 compatibility issues
+          echo "Skipping Supabase migrations due to IPv6 compatibility issues"
+          echo "Consider purchasing the IPv4 addon from Supabase if direct database access is needed"
 
-          # The following may fail if IPv6-only is enabled
-          # Consider purchasing the IPv4 addon from Supabase if this step is critical
-          supabase db push || echo "Database migration failed - you may need the IPv4 addon from Supabase"
+          # Commenting out the original commands:
+          # supabase link --project-ref ${{ secrets.STAGING_PROJECT_ID }}
+          # supabase db push
         env:
           SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
           SUPABASE_DB_PASSWORD: ${{ secrets.STAGING_DB_PASSWORD }}
