stop supabase steps

--- a/.github/workflows/db-migrations.yml
+++ b/.github/workflows/db-migrations.yml
@@ -1,4 +1,7 @@
-name: Database Migrations
+name: Database Migrations (DISABLED)
+
+# This workflow is disabled - database migrations are managed manually
+# To re-enable, remove the (DISABLED) suffix and uncomment the Supabase commands
 on:
   workflow_dispatch:
     inputs:
