--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -29,12 +29,8 @@ jobs:
         if: steps.node-modules-cache.outputs.cache-hit != 'true'
         run: npm ci
 
-      # IMPORTANT NOTICE ABOUT DATABASE OPERATIONS
-      - name: Database Operations Notice
-        run: |
-          echo "NOTICE: All Supabase database operations have been disabled"
-          echo "GitHub Actions runners cannot connect to Supabase via IPv6"
-          echo "Consider purchasing the IPv4 addon from Supabase if database operations are needed in CI/CD"
+      # REMOVED: All Supabase setup and deployment steps
+      # Database changes will be managed manually outside of CI/CD
 
       - name: Prepare Staging Configuration
         run: |
