--- a/package.json
+++ b/package.json
@@ -14,7 +14,12 @@
     "prettier": "prettier --write --ignore-unknown .",
     "prettier:check": "prettier --check --ignore-unknown .",
     "lint-staged": "lint-staged",
-    "test": "next lint && prettier --check --ignore-unknown ."
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "build:widget": "NODE_ENV=production webpack --config webpack.widget.config.js",
+    "build:widget:dev": "NODE_ENV=development webpack --config webpack.widget.config.js --watch",
+    "build:all": "npm run build && npm run build:widget"
   },
   "git": {
     "pre-commit": "lint-staged"
@@ -40,7 +45,7 @@
     "@radix-ui/react-tooltip": "^1.2.6",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.6.1",
-    "@supabase/supabase-js": "^2.49.4",
+    "@supabase/supabase-js": "^2.39.7",
     "@tanstack/react-table": "^8.21.3",
     "@types/canvas-confetti": "^1.9.0",
     "canvas-confetti": "^1.9.3",
@@ -52,27 +57,43 @@
     "lucide-react": "^0.507.0",
     "next": "^14.2.28",
     "next-themes": "^0.4.6",
+    "node-mocks-http": "^1.14.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-joyride": "^2.9.3",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.22.4",
     "zustand": "^5.0.4"
   },
   "devDependencies": {
+    "@babel/core": "^7.26.10",
+    "@babel/preset-env": "^7.26.7",
     "@eslint/eslintrc": "^3.3.1",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^14.3.1",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/jest": "^29.5.14",
     "@types/lodash.throttle": "^4.1.9",
     "@types/node": "^20.11.16",
     "@types/react": "^18.2.52",
     "@types/react-dom": "^18.2.18",
     "@vercel/git-hooks": "^1.0.0",
     "autoprefixer": "^10.4.17",
+    "babel-jest": "^29.7.0",
+    "babel-loader": "^9.2.1",
     "eslint": "^8.56.0",
     "eslint-config-next": "14.1.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^15.5.1",
     "postcss": "^8.4.35",
     "prettier": "^3.5.3",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.3.3"
+    "terser-webpack-plugin": "^5.3.11",
+    "typescript": "^5.3.3",
+    "webpack": "^5.97.1",
+    "webpack-cli": "^5.1.4"
   }
 }
