--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "react-hook-form": "^7.55.0",
     "react-joyride": "^2.9.3",
     "recharts": "^2.7.2",
+    "resend": "^4.5.1",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.2",
