--- a/vercel.json
+++ b/vercel.json
@@ -17,5 +17,8 @@
   "github": {
     "enabled": true,
     "silent": false
+  },
+  "build": {
+    "ignoreCommand": "if [ \"$VERCEL_GIT_BRANCH\" = \"develop\" ]; then exit 1; fi"
   }
 }
