--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -48,23 +48,11 @@ jobs:
           SUPABASE_AUTH_GOOGLE_SECRET: ${{ secrets.STAGING_SUPABASE_AUTH_GOOGLE_SECRET }}
           SUPABASE_AUTH_GOOGLE_REDIRECT_URI: ${{ secrets.STAGING_SUPABASE_AUTH_GOOGLE_REDIRECT_URI }}
 
-      - name: Install Vercel CLI
-        run: npm install --global vercel@latest
-
-      - name: Pull Vercel Environment Information
-        run: vercel pull --yes --token=${{ secrets.VERCEL_TOKEN }}
-        env:
-          VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
-          VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
-
-      - name: Deploy to Vercel
-        run: |
-          # Deploy to Vercel using CLI with token authentication
-          DEPLOYMENT_URL=$(vercel deploy --token=${{ secrets.VERCEL_TOKEN }} --confirm)
-          echo "Deployed to $DEPLOYMENT_URL"
-
-          # Set up the alias domain with token authentication
-          vercel alias set $DEPLOYMENT_URL staging.feedvote.com --token=${{ secrets.VERCEL_TOKEN }} --scope=${{ secrets.VERCEL_TEAM_SLUG || secrets.VERCEL_ORG_ID }}
-        env:
-          VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
-          VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
+      - name: Deploy to Vercel Staging
+        uses: amondnet/vercel-action@v25
+        with:
+          vercel-token: ${{ secrets.VERCEL_TOKEN }}
+          vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
+          vercel-project-id: ${{ secrets.VERCEL_STAGING_PROJECT_ID }}
+          alias-domains: |
+            staging.feedvote.com
