--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -54,6 +54,6 @@ jobs:
           vercel-token: ${{ secrets.VERCEL_TOKEN }}
           vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
           vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
-          working-directory: ./
+          github-token: ${{ secrets.GITHUB_TOKEN }}
           alias-domains: |
             staging.feedvote.com
