--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Ignore rules
+.cursor/rules/
 
+# Ignore tasks folder
+tasks/
 # dependencies
 /node_modules
 /.pnp
