--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -13,40 +13,10 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      - name: Set node version
-        uses: actions/setup-node@v3
-        with:
-          node-version-file: '.nvmrc'
-
-      - name: Cache node_modules
-        id: node-modules-cache
-        uses: actions/cache@v3
-        with:
-          path: '**/node_modules'
-          key: node-modules-cache-${{ hashFiles('**/package-lock.json') }}
-
-      - name: Install dependencies
-        if: steps.node-modules-cache.outputs.cache-hit != 'true'
-        run: npm ci
-
-      # REMOVED: All Supabase setup and deployment steps
-      # Database changes will be managed manually outside of CI/CD
-
       - name: Prepare Staging Configuration
         run: |
-          # Use staging-specific Vercel configuration
           cp vercel.staging.json vercel.json
           echo "Using staging-specific Vercel configuration"
-
-      - name: Build Next.js app
-        run: npm run build
-        env:
-          NEXT_PUBLIC_SUPABASE_URL: ${{ secrets.STAGING_SUPABASE_URL }}
-          NEXT_PUBLIC_SUPABASE_ANON_KEY: ${{ secrets.STAGING_SUPABASE_ANON_KEY }}
-          NEXT_PUBLIC_SITE_URL: 'https://staging.feedvote.com'
-          SUPABASE_AUTH_GOOGLE_CLIENT_ID: ${{ secrets.STAGING_SUPABASE_AUTH_GOOGLE_CLIENT_ID }}
-          SUPABASE_AUTH_GOOGLE_SECRET: ${{ secrets.STAGING_SUPABASE_AUTH_GOOGLE_SECRET }}
-          SUPABASE_AUTH_GOOGLE_REDIRECT_URI: ${{ secrets.STAGING_SUPABASE_AUTH_GOOGLE_REDIRECT_URI }}
 
       - name: Deploy to Vercel Staging
         uses: amondnet/vercel-action@v25
@@ -57,3 +27,4 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           alias-domains: |
             staging.feedvote.com
+          vercel-args: '--prod --build-env NEXT_PUBLIC_SUPABASE_URL=${{ secrets.STAGING_SUPABASE_URL }} --build-env NEXT_PUBLIC_SUPABASE_ANON_KEY=${{ secrets.STAGING_SUPABASE_ANON_KEY }}'
